# etherfields-ai

./: .env.example  .gitignore  Dockerfile  Dockerfile.voice  GEMINI.md  README.md  RULEMASTER.md  TOPICS.md  build_containers.py  docker-compose.yml  extract_chat.py  index.json  install.py  preprocess_scripts.py  pyproject.toml  rulebook_tool.py  secret_scripts_tool.py  voice_assistant.py  voice_listener.py
.github/agents/: adversarial-preamble.md  dev-rulebook-retriever.md  dev-secret-scripts.md  dev-voice-assistant.md  review-architecture.md  review-observability.md  review-orchestrator.md  review-rulebook-retriever.md  review-secret-scripts.md  review-security.md  review-voice-assistant.md
.github/workflows/: adversarial_review.yml  publish_containers.yml  (+1 more)
rulebook_pages/: page_01.txt  page_02.txt  page_03.txt  page_04.txt  page_05.txt  page_06.txt  page_07.txt  page_08.txt  page_09.txt  page_10.txt  page_11.txt  page_12.txt  page_13.txt  page_14.txt  page_15.txt  page_16.txt  page_17.txt  page_18.txt  page_19.txt  page_20.txt
src/: extract_chat.py  mcp_server.py  preprocess_scripts.py  rulebook_tool.py  secret_scripts_tool.py
topics/: boss-slumbers-butcher-dreammonger.md  dreamworld-movement-hand-management.md  flaw-and-fate-cards.md  item-and-clock-ecosystem.md  morphings-and-slumber-setup.md  shopping-and-map-fog.md  shopping-and-markets.md  spirit-tokens-free-spirit.md
voice/: VOICE_TOOLS.md  create_voice.py  test_assistant.py  test_stt.py  voice_assistant.py  voice_install.py  voice_listener.py  voice_training_wizard.py  wakeword_model_training.ipynb
(+12 files in other folders)
