[project]
name = "etherfields-ai"
version = "0.1.0"
description = "🌌 Etherfields AI Board Game Assistant & Retrieval Engine"
readme = "README.md"
requires-python = "==3.11.10"
dependencies = [
    "mcp>=1.28.1",
    "pypdf>=5.0.0",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0.0; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "kokoro-onnx>=0.3.0",
    "mlx-whisper>=0.4.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "nanowakeword>=0.1.0",
    "numpy>=1.26.0",
    "onnxruntime>=1.16.0",
    "openwakeword>=0.6.0",
    "setuptools>=69.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "static-ffmpeg>=2.5",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "websockets>=12.0",
]


[dependency-groups]
dev = [
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
